overlays/prod/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: springboot-app
spec:
  replicas: 2
  strategy:
    blueGreen:
      activeService: springboot-app-active
      previewService: springboot-app-preview
      autoPromotionEnabled: false
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: the-container
        image: reachnaveen/springboot-app:latest
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"          
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
        volumeMounts:
          - name: config-volume
            mountPath: /config/application.properties
            subPath: application.properties
      volumes:
        - name: config-volume
          configMap:
            name: springboot-app-config
