overlays/prod/bluegreen-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-active
spec:
  selector:
    app: springboot-app
    track: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
