overlays/prod/springboot-app-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-app-preview
spec:
  selector:
    app: springboot-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
